test-cases/negative/test_091_object_missing_property.lay
# negative test: object missing required property
# expected: type checker should catch this

define class Person
  the property name of type String
  the property age of type Number

the variable person of type Person is a new Person with
  name is 'John'


